--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
 <div class="row centered">
   <h1>Norman Music Fest 2016 Schedule</h1>
+
   <p>Choose one of the days below (or above) to see the schedule for that day.</p>
   <div class="main-days row">
       <div class="small-4 columns">{{link-to 'Thursday' 'day' 'thursday'}}</div>
@@ -18,11 +19,13 @@
 
   <hr />
 
+  {{my-shows}}
+
   <h2>About</h2>
   <p>
     This app was created by Jeremy Green
     (<a href="http://twitter.com/jagthedrummer">@jagthedrummer</a>)
-    of <a href="http://www.octolabs.com/">OctoLabs</a> to give people an easier way to 
+    of <a href="http://www.octolabs.com/">OctoLabs</a> to give people an easier way to
     browse the NMF schedule, especially on mobile devices.
   </p>
   <p>
