Polis the home page and add a coming soon section for "My Schedule"
Fixes #5 and fixes #6

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -244,3 +244,14 @@ ol.no-bullets{
     padding:0.5rem 1rem;
   }
 }
+
+.main-days{
+  a{
+    display:block;
+    text-align:center;
+    background: #2898b4;
+    color:white;
+    padding:0.5rem;
+    font-size:1.5em;
+  }
+}
