--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,23 @@
 <div class="row centered">
   <h1>Norman Music Fest 2016 Schedule</h1>
-  <ul>
-      <li class="">{{link-to 'Thursday' 'day' 'thursday'}}</li>
-      <li class="">{{link-to 'Friday' 'day' 'friday'}}</li>
-      <li class="">{{link-to 'Saturday' 'day' 'saturday'}}</li>
-  </ul>
+  <p>Choose one of the days below (or above) to see the schedule for that day.</p>
+  <div class="main-days row">
+      <div class="small-4 columns">{{link-to 'Thursday' 'day' 'thursday'}}</div>
+      <div class="small-4 columns">{{link-to 'Friday' 'day' 'friday'}}</div>
+      <div class="small-4 columns">{{link-to 'Saturday' 'day' 'saturday'}}</div>
+  </div>
+
+  <hr />
+
+  <h2>My Schedule - Coming Soon</h2>
+  <p>
+    Anywhere you see a calendar icon attached to a show, just click/tap on it and that show
+    will be added to your custom list of shows here on the home page. This will make it easy
+    for you to keep track of the shows you want to see.
+  </p>
+
+  <hr />
+
   <h2>About</h2>
   <p>
     This app was created by Jeremy Green
