Manually set the height of various components
Flexbox is buggy in Android browser and iPad and this method fixes the problem.

Fixes #7

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,11 @@
+<style type="text/css" media="all">
+  .body-container{
+    height: {{bodyContainerHeight}}px;
+  }
+  ol.no-bullets{
+    height: {{olHeight}}px;
+  }
+</style>
 <div class="schedule">
   <section class="day-nav row centered collapse">
     <!--<h2 id="title">{{link-to 'NMF Schedule' 'index'}}</h2>-->
