--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,10 +44,12 @@ html, body{
 }
 
 .schedule > .liquid-container {
-    flex: 1 1 100%;
+    /*flex: 1 1 0%;*/
     position: relative;
+    /*
     min-height:500px;
     min-height: 80vh;
+    */
 }
 
 .schedule > .liquid-container > .liquid-child {
@@ -200,8 +202,10 @@ ol.no-bullets{
   margin:0;
   padding:0;
   position:relative;
-  min-height:500px;
-  min-height:90vh;
+  /*
+    min-height:500px;
+    min-height:90vh;
+  */
   li{
     border-bottom:1px solid #ddd;
     padding:0;
