Tweak for moving to a real domain

--- a/app/templates/day/event.hbs
+++ b/app/templates/day/event.hbs
@@ -4,6 +4,6 @@
 
 {{band-info bandId=model.id}}
 
-<img src="/nmf_schedule/maps/{{model.stageId}}.png"/>
+<img src="/maps/{{model.stageId}}.png"/>
 {{outlet}}
 </div>
