A little polish on My Shows

--- a/app/components/my-shows/template.hbs
+++ b/app/components/my-shows/template.hbs
@@ -1,26 +1,33 @@
 <hr>
-<h2>My Shows</h2>
+<h2>{{fa-icon "fa-calendar-plus-o"}} My Shows</h2>
+
+<p>
+  Anywhere you see a calendar icon attached to a show, just click/tap on it and that show
+  will be added to your custom list of shows here on the home page. This will make it easy
+  for you to keep track of the shows you want to see.
+</p>
+
+
 {{#if myShows.shows.length}}
   <ol class="no-bullets">
   {{#each myShows.shows as |event|}}
     <li class='small-12 columns accordion event-row' data-talk-id={{event.id}} data-event-row-id={{event.id}}>
       <div class="row small-collapse medium-uncollapse">
 
-        <div class="band-name small-9 medium-5 columns" onclick={{action "chooseTalk"}}>
+        <div class="band-name small-7 medium-5 columns" onclick={{action "chooseTalk"}}>
           <h3 data-event-id={{event.id}}>{{event.bandName}}</h3>
           {{!is-interested-button talkId=talk.id}}
         </div>
-        <div class="stage-name small-8 medium-5 columns" onclick={{action "chooseTalk"}}>
+        <div class="stage-name small-5 medium-3 columns" onclick={{action "chooseTalk"}}>
           <h5>{{event.stageName}}</h5>
           {{!is-interested-button talkId=talk.id}}
         </div>
-        <div class="event-time small-3 medium-1 columns" onclick={{action "chooseTalk"}}>
-          <h5>{{event.time}}</h5>
+        <div class="event-time small-9 medium-3 columns" onclick={{action "chooseTalk"}}>
+          <h5>{{event.day}} - <span class="time">{{event.time}}</span></h5>
+
         </div>
-        <div class="event-time small-1 medium-1 columns" onclick={{action "addShow" event}}>
-            {{fa-icon "fa-calendar-check-o"}}
-            {{fa-icon "fa-calendar-plus-o"}}
-            {{fa-icon "fa-calendar-times-o"}}
+        <div class="event-time small-3 medium-1 columns" onclick={{action "removeShow" event}}>
+          <h3 class="remove">{{fa-icon "fa-calendar-times-o"}}</h3>
         </div>
       </div>
     </li>
