--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,16 +8,6 @@
       <div class="small-4 columns">{{link-to 'Saturday' 'day' 'saturday'}}</div>
   </div>
 
-  <hr />
-
-  <h2>My Schedule - Coming Soon</h2>
-  <p>
-    Anywhere you see a calendar icon attached to a show, just click/tap on it and that show
-    will be added to your custom list of shows here on the home page. This will make it easy
-    for you to keep track of the shows you want to see.
-  </p>
-
-  <hr />
 
   {{my-shows}}
 
@@ -25,8 +15,9 @@
   <p>
     This app was created by Jeremy Green
     (<a href="http://twitter.com/jagthedrummer">@jagthedrummer</a>)
-    of <a href="http://www.octolabs.com/">OctoLabs</a> to give people an easier way to
-    browse the NMF schedule, especially on mobile devices.
+    of <a href="http://www.octolabs.com/">OctoLabs</a> and Ryan LaBouve (<a href="http://twitter.com/RyanLaBouve">@RyanLaBouve</a>)
+    The purpose is to give people an easier way to
+    browse and track the NMF schedule, especially on mobile devices.
   </p>
   <p>
     This is an un-official project and is not associated with or endorsed by the official
