--- a/app/templates/day/index.hbs
+++ b/app/templates/day/index.hbs
@@ -22,23 +22,22 @@
             <li class='small-12 columns accordion event-row' data-talk-id={{event.id}} data-event-row-id={{event.id}}>
               <div class="row small-collapse medium-uncollapse">
 
-                <div class="band-name small-9 medium-5 columns" onclick={{action "chooseTalk"}}>
+                <div class="band-name small-7 medium-5 columns" onclick={{action "chooseTalk"}}>
                   <h3 data-event-id={{event.id}}>{{event.bandName}}</h3>
                   {{!is-interested-button talkId=talk.id}}
                 </div>
-                <div class="stage-name small-8 medium-4 columns" onclick={{action "chooseTalk"}}>
+                <div class="stage-name small-5 medium-4 columns" onclick={{action "chooseTalk"}}>
                   <h5>{{event.stageName}}</h5>
                   {{!is-interested-button talkId=talk.id}}
                 </div>
-                <div class="event-time small-3 medium-2 columns" onclick={{action "chooseTalk"}}>
+                <div class="event-time small-9 medium-2 columns" onclick={{action "chooseTalk"}}>
                   <h5>{{event.time}}</h5>
                 </div>
-                <div class="event-time small-1 medium-1 columns" onclick={{action "addShow" event}}>
+                <div class="event-time small-3 medium-1 columns" onclick={{action "addShow" event}}>
                   {{#if (hasShow myShows.shows event.id)}}
-                    {{fa-icon "fa-calendar-check-o"}}
+                    <h3 class="add">{{fa-icon "fa-calendar-times-o"}}</h3>
                   {{else}}
-                    {{fa-icon "fa-calendar-plus-o"}}
-                    {{fa-icon "fa-calendar-times-o"}}
+                    <h3 class="remove">{{fa-icon "fa-calendar-plus-o"}}</h3>
                   {{/if}}
                 </div>
               </div>
