Add a v important period

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,7 +15,7 @@
   <p>
     This app was created by Jeremy Green
     (<a href="http://twitter.com/jagthedrummer">@jagthedrummer</a>)
-    of <a href="http://www.octolabs.com/">OctoLabs</a> and Ryan LaBouve (<a href="http://twitter.com/RyanLaBouve">@RyanLaBouve</a>)
+    of <a href="http://www.octolabs.com/">OctoLabs</a> and Ryan LaBouve (<a href="http://twitter.com/RyanLaBouve">@RyanLaBouve</a>).
     The purpose is to give people an easier way to
     browse and track the NMF schedule, especially on mobile devices.
   </p>
