--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
     <ul class="row nav">
       <li class="small-3 columns">
           {{#if showArrow}}
-            {{#link-to "day.index" class="back-link"}}
+            {{#link-to backLinkPath class="back-link"}}
               <img src="back-arrow.svg" class="back-icon" />
             {{/link-to}}
           {{else}}
