Add a message for when we can't find a my-show
This happens reproducibally when a /my-show/* path is reloaded.
Need to figure out how to get the model hook to fire after the
my-shows service has been initialized.

--- a/app/templates/my-show.hbs
+++ b/app/templates/my-show.hbs
@@ -1,2 +1,10 @@
-
-{{partial 'day/event'}}
+{{#if model}}
+  {{partial 'day/event'}}
+{{else}}
+  <div class="row">
+    <h2>Aaaahhhhh dang it!</h2>
+    <p>It looks like we couldn't find the show you're looking for.</p>
+    <p>Your best bet now is probably to {{link-to 'go back to the home page.' 'index'}}</p>
+    <p>It's admittedly a poor solution, and one that we only suggest as a last resort with much regret.</p>
+  </div>
+{{/if}}
