--- a/app/templates/day/index.hbs
+++ b/app/templates/day/index.hbs
@@ -22,25 +22,25 @@
             <li class='small-12 columns accordion event-row' data-talk-id={{event.id}} data-event-row-id={{event.id}} onclick={{action "chooseTalk"}}>
               <div class="row small-collapse medium-uncollapse">
 
-                <div class="band-name small-9 medium-5 columns" >
-                  <h3 data-event-id={{event.id}}>{{event.bandName}}</h3>
+                <div class="band-name small-8 medium-5 columns" >
+                  <span data-event-id={{event.id}}>{{event.bandName}}</span>
                   {{!is-interested-button talkId=talk.id}}
                 </div>
-                <div class="event-time small-3 medium-2 columns" >
-                  <h5>{{event.time}}</h5>
+                <div class="event-time small-4 medium-2 columns" >
+                  <span>{{event.time}}</span>
                 </div>
 
 
-                <div class="stage-name small-9 medium-4 columns" >
-                  <h5>{{event.stageName}}</h5>
+                <div class="stage-name small-8 medium-4 columns" >
+                  <span>{{event.stageName}}</span>
                   {{!is-interested-button talkId=talk.id}}
                 </div>
                 
-                <div class="event-time small-3 medium-1 columns" onclick={{action "addShow" event}}>
+                <div class="small-4 medium-1 columns" onclick={{action "addShow" event}}>
                   {{#if (hasShow myShows.shows event.id)}}
-                    <h3 class="add">{{fa-icon "fa-calendar-times-o"}}</h3>
+                    <span class="add">{{fa-icon "fa-calendar-times-o"}}</span>
                   {{else}}
-                    <h3 class="remove">{{fa-icon "fa-calendar-plus-o"}}</h3>
+                    <span class="remove">{{fa-icon "fa-calendar-plus-o"}}</span>
                   {{/if}}
                 </div>
               </div>
